feat: add alert for index.html

--- a/index.html
+++ b/index.html
@@ -749,5 +749,8 @@
 
         <script src="src/js/theme-switcher.js"></script>
         <script type="module" src="src/js/script.js"></script>
+        <script>
+            alert("Hello");
+        </script>
     </body>
 </html>
