--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
                     <nav class="header-nav">
                         <a class="header-nav__link active" href="#">Home</a>
                         <a class="header-nav__link" href="tasks.html">Tasks</a>
+                        <a
+                            class="header-nav__link"
+                            href="src/html/bootstrap.html"
+                            >Bootstrap</a
+                        >
                         <a class="header-nav__link" href="#">Experiences</a>
                         <a class="header-nav__link" href="#">Airbnb you home</a>
                     </nav>
