refactor: correct style for header

--- a/src/html/bootstrap.html
+++ b/src/html/bootstrap.html
@@ -12,10 +12,10 @@
         />
         <link rel="stylesheet" href="../css/bs-css/bs-style.css" />
     </head>
-    <body>
-        <div class="container">
-            <header>
-                <nav class="navbar navbar-expand-lg pb-3 pt-5">
+    <body class="bg-light">
+        <header class="bg-body">
+            <div class="container">
+                <nav class="navbar navbar-expand-lg pb-4 pt-5">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="../../index.html">
                             <svg
@@ -59,7 +59,11 @@
                         >
                             <ul class="navbar-nav">
                                 <li class="nav-item me-3">
-                                    <a class="nav-link active" href="#">Home</a>
+                                    <a
+                                        class="nav-link active"
+                                        href="../../index.html"
+                                        >Home</a
+                                    >
                                 </li>
                                 <li class="nav-item me-3">
                                     <a class="nav-link" href="#"
@@ -81,8 +85,8 @@
                         </div>
                     </div>
                 </nav>
-            </header>
-        </div>
+            </div>
+        </header>
 
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
