--- a/clients.html
+++ b/clients.html
@@ -6,24 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>App</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&display=swap" rel="stylesheet" />
+
     <meta name="theme-color" media="(prefers-color-scheme: light)" content="hsl(0 0% 100%)" />
     <meta name="theme-color" media="(prefers-color-scheme: dark)" content="hsl(0 0% 100%)" />
     <link rel="stylesheet" href="src/css/style.css" />
-    <link rel="preload" href="src/fonts/IBM-Plex-Sans/IBMPlexSans.woff" as="font" type="font/woff" crossorigin="" />
-    <link
-      rel="preload"
-      href="src/fonts/IBM-Plex-Sans/IBMPlexSans-Medium.woff"
-      as="font"
-      type="font/woff"
-      crossorigin=""
-    />
-    <link
-      rel="preload"
-      href="src/fonts/IBM-Plex-Sans/IBMPlexSans-SemiBold.woff"
-      as="font"
-      type="font/woff"
-      crossorigin=""
-    />
     <link rel="stylesheet" href="src/css/light.css" media="(prefers-color-scheme: light)" />
     <link rel="stylesheet" href="src/css/dark.css" media="(prefers-color-scheme: dark)" />
   </head>
@@ -188,8 +177,50 @@
 
     <main>
       <section class="clients">
-        <div class="container">
-          <h3>Clients</h3>
+        <div class="wrapper">
+          <div class="clients__head">Our clients speak</div>
+          <div class="clients__table-2-row">
+            <div class="clients__table-col">
+              <div class="clients__descrption">
+                <div class="clients__text-elem">
+                  <div class="clients__header">Incredible Experience</div>
+                  <div class="clients__sentence">
+                    We had an incredible experience working with Landify and were impressed they made such a big
+                    difference in only three weeks. Our team is so grateful for the wonderful improvements they made and
+                    their ability to get familiar with the concept so quickly. It acted as a catalyst to take our design
+                    to the next level and get more eyes on our product.
+                  </div>
+                </div>
+              </div>
+              <div class="clients__client">
+                <img class="clients__client-photo" src="public/images/clients/Photo.png" alt="client-photo" />
+                <div>
+                  <div class="clients__client-name">Jane Cooper</div>
+                  <div class="clients__client-specialization">CEO, ABC Corporation</div>
+                </div>
+              </div>
+            </div>
+            <div class="clients__table-col">
+              <div class="clients__descrption">
+                <div class="clients__text-elem">
+                  <div class="clients__header">Incredible Experience</div>
+                  <div class="clients__sentence">
+                    We had an incredible experience working with Landify and were impressed they made such a big
+                    difference in only three weeks. Our team is so grateful for the wonderful improvements they made and
+                    their ability to get familiar with the concept so quickly. It acted as a catalyst to take our design
+                    to the next level and get more eyes on our product.
+                  </div>
+                </div>
+              </div>
+              <div class="clients__client">
+                <img class="clients__client-photo" src="public/images/clients/Photo.png" alt="client-photo" />
+                <div>
+                  <div class="clients__client-name">Jane Cooper</div>
+                  <div class="clients__client-specialization">CEO, ABC Corporation</div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
