--- a/clients.html
+++ b/clients.html
@@ -203,12 +203,12 @@
             <div class="clients__table-col">
               <div class="clients__descrption">
                 <div class="clients__text-elem">
-                  <div class="clients__header">Incredible Experience</div>
+                  <div class="clients__header">Dependable, Responsive, Professional Partner</div>
                   <div class="clients__sentence">
-                    We had an incredible experience working with Landify and were impressed they made such a big
-                    difference in only three weeks. Our team is so grateful for the wonderful improvements they made and
-                    their ability to get familiar with the concept so quickly. It acted as a catalyst to take our design
-                    to the next level and get more eyes on our product.
+                    Fermin Apps has collaborated with Landify team for several projects such as Photo Sharing Apps and
+                    Custom Social Networking Apps. The experience has been pleasant, professional and exceeding our
+                    expectations. The team is always thinking beyond the current tasks & helps us formulate a vision and
+                    possibilities for future.
                   </div>
                 </div>
               </div>
@@ -220,6 +220,11 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div class="clients__pagination">
+            <div class="clients__pagination-element_active"></div>
+            <div class="clients__pagination-element"></div>
+            <div class="clients__pagination-element"></div>
           </div>
         </div>
       </section>
