--- a/clients.html
+++ b/clients.html
@@ -10,6 +10,22 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&display=swap" rel="stylesheet" />
 
+    <link rel="preload" href="src/fonts/IBM-Plex-Sans/IBMPlexSans.woff" as="font" type="font/woff" crossorigin="" />
+    <link
+      rel="preload"
+      href="src/fonts/IBM-Plex-Sans/IBMPlexSans-Medium.woff"
+      as="font"
+      type="font/woff"
+      crossorigin=""
+    />
+    <link
+      rel="preload"
+      href="src/fonts/IBM-Plex-Sans/IBMPlexSans-SemiBold.woff"
+      as="font"
+      type="font/woff"
+      crossorigin=""
+    />
+
     <meta name="theme-color" media="(prefers-color-scheme: light)" content="hsl(0 0% 100%)" />
     <meta name="theme-color" media="(prefers-color-scheme: dark)" content="hsl(0 0% 100%)" />
     <link rel="stylesheet" href="src/css/style.css" />
